# minimal-crashing-example-poetry2nix-and-django-anymail-10.1

./: README.md  default.nix  pyproject.toml  shell.nix
