[tool.poetry]
name = "tmp"
version = "0.1.0"
description = ""
authors = ["Andreas Ekeroot <andeke@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django-anymail = {extras = ["postmark"], version = "^10.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
